fix: add text alignment helper classes in general.scss for improved layout control and update styles.min.css for consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -665,6 +665,16 @@ body.logged-in {
 }
 
 // helpers
+.has-text-align-center {
+	text-align: center;
+}
+.has-text-align-right {
+	text-align: right;
+}
+.has-text-align-left {
+	text-align: left;
+}
+
 .text-content {
     ul, p, h1, h2, h3, h4, h5 .h6 {
         margin-bottom: 25px;
